--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <div class="header">
     <div class="bone">
-        <div class="header_net flex__center">
+        <div class="header_net flex__center ">
 
 
             <div class="header_left flex__center">
@@ -242,7 +242,7 @@ navBtn.onclick = function () {
 <div class="horisontal">
     <div class="bone">
         <div class="horisontal_net flex__center">
-            <div class="horisontal_left">
+            <div class="horisontal_left item">
                 <h1>Сonvert email into sharing link</h1>
                 <p>
                     You no longer have to forward emails or copy and paste content to share it. Simply generate a link to the email and share it quickly and easily
@@ -251,7 +251,7 @@ navBtn.onclick = function () {
 <!--                    <a class="btn" href="/en/signup">Get started now</a>-->
 <!--                </div>-->
             </div>
-            <div class="horisontal_img">
+            <div class="horisontal_img item">
                 <div class="border-forward">
                     <div class="border-forward__share">
                         <p>To share an email via a link, simply forward email to the  <span>xxx@proxiedmail.com</span></p>
@@ -325,14 +325,14 @@ navBtn.onclick = function () {
                 <h2 class="icon icon-puf">How I can forward the letter</h2>
                     <p>Select the mail service you usually use</p>
                     
-        <div class="form-group">
+        <div class="form-group " >
             <label>
                 <input type="radio" checked name="category" value="coding-notes"  class="real-radio">
                 <span class="custom-radio"></span>
                 <img src="/images/v2/mgmail.png" alt="foto">
             </label>
         </div>
-        <div class="form-group">
+        <div class="form-group ">
             <label>
                 <input type="radio" name="category" value="travel-notes" class="real-radio">
                 <span class="custom-radio"></span>
@@ -460,7 +460,7 @@ navBtn.onclick = function () {
                     </div>
                   </div>
                      <!-- **************** FAQ Section 2 -->
-                     <div class="accordion">
+                     <div class="accordion ">
                         <div class="accordion-header new-title">
                             Is EmailShareViaLink secure? <span class="accordion-icon">	&#43;</span>
                         </div>
@@ -474,7 +474,7 @@ navBtn.onclick = function () {
                         </div>
                       </div>
  <!-- **************** FAQ Section 3 -->
-                        <div class="accordion">
+                        <div class="accordion ">
                             <div class="accordion-header new-title">
                                 Can I control who has access to the email link? <span class="accordion-icon">	&#43;</span>
                             </div>
@@ -487,7 +487,7 @@ navBtn.onclick = function () {
                             </div>
                         </div>
   <!-- **************** FAQ Section 4 -->
-                            <div class="accordion">
+                            <div class="accordion ">
                                 <div class="accordion-header new-title">
                                     What are the benefits of using EmailShareViaLink? <span class="accordion-icon">	&#43;</span>
                                 </div>
@@ -501,8 +501,8 @@ navBtn.onclick = function () {
                                 </ul> 
                                 </div>
                             </div>
-   <!-- **************** FAQ Section 5 -->
-                            <div class="accordion">
+   
+                            <div class="accordion ">
                                 <div class="accordion-header new-title">
                                     How can I contact EmailShareViaLink if I have more questions?<span class="accordion-icon">	&#43;</span>
                                 </div>
