--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ navBtn.onclick = function () {
 <div class="horisontal">
     <div class="bone">
         <div class="horisontal_net flex__center">
-            <div class="horisontal_left item">
+            <div class="horisontal_left">
                 <h1>Сonvert email into sharing link</h1>
                 <p>
                     You no longer have to forward emails or copy and paste content to share it. Simply generate a link to the email and share it quickly and easily
@@ -251,7 +251,7 @@ navBtn.onclick = function () {
 <!--                    <a class="btn" href="/en/signup">Get started now</a>-->
 <!--                </div>-->
             </div>
-            <div class="horisontal_img item">
+            <div class="horisontal_img">
                 <div class="border-forward">
                     <div class="border-forward__share">
                         <p>To share an email via a link, simply forward email to the  <span>xxx@proxiedmail.com</span></p>
@@ -433,7 +433,7 @@ navBtn.onclick = function () {
 
 <div class="mailing">
     <div class="bone">
-        <div class="mailing_net flex__center">
+        <div class="mailing_net flex__faq">
             <div class="mailing_left">
                 <h2 class="icon icon-puf">FAQs</h2>
                 <p>Everything you need to know about the product. Can’t find an answer?<br> Contact us 
