Замена иконок, текста во вто ром блоке

--- a/index.html
+++ b/index.html
@@ -224,44 +224,40 @@
                 <div class="triple_item">
                     <div class="triple_item_img">
                         <picture>
-                            <source srcset="/images/v2/t1.1.webp" type="image/webp">
-                            <img src="/images/v2/t1.1.png" alt
-                                srcset="/images/v2/t1.1.png 1x, /images/v2/t1.1@2x.png 2x">
+                            <source srcset="/images/v2/works1.svg " type="image/svg">
+                            <img src="/images/v2/works1.svg" alt
+                                srcset="/images/v2/ works1.svg 1x, /images/v2/ works1.svg 2x">
                         </picture>
                     </div>
-                    <div class="triple_item_name">Email message</div>
-                    <div class="triple_item_text">Someone sent you a message. It can be personal message or notification
-                        from one of your used services.
+                    <div class="triple_item_name"> Choose email you want to share</div>
+                    <div class="triple_item_text">If you've received an email that you want to share with others, you can do so using EmailShareViaLink.
                     </div>
                 </div>
                 <div class="triple_item">
                     <div class="triple_item_img">
                         <picture>
-                            <source srcset="/images/v2/t1.2.webp" type="image/webp">
-                            <img src="/images/v2/t1.2.png" alt
-                                srcset="/images/v2/t1.2.png 1x, /images/v2/t1.2@2x.png 2x">
+                            <source srcset="/images/v2/works2.svg" type="image/svg">
+                            <img src="/images/v2/works2.svg" alt
+                                srcset="/images/v2/works2.svg 1x, /images/v2/works2.svg 2x">
                         </picture>
                     </div>
-                    <div class="triple_item_name">Proxiedmail encrypted</div>
+                    <div class="triple_item_name"> Send email to special adress</div>
                     <div class="triple_item_text">
-                        We have received your message and then we are looking for your real address to forward.
+                        Simply forward the email to a special address provided by EmailShareViaLink. Once processed, you'll receive a link to the email that you can share with others. You also have the option to set privacy settings or delete the email.
                     </div>
                 </div>
                 <div class="triple_item">
                     <div class="triple_item_img">
                         <picture>
-                            <source srcset="/images/v2/t1.3.webp" type="image/webp">
-                            <img src="/images/v2/t1.3.png" alt
-                                srcset="/images/v2/t1.3.png 1x, /images/v2/t1.3@2x.png 2x">
+                            <source srcset="/images/v2/work3.svg" type="image/svg">
+                            <img src="/images/v2 work3.svg" alt
+                                srcset="/images/v2/work3.svg 1x, /images/v2/work3.svg 2x">
                         </picture>
                     </div>
-                    <div class="triple_item_name">Your real adress
+                    <div class="triple_item_name">Get your sharing link
                     </div>
                     <div class="triple_item_text">
-                        We have forwarded your message to your real email address. You can deactivate receiving the
-                        message anytime or delete it permanently.
-
-
+                        Now that you have the link, you can easily share the email content with anyone you want via email, forum, social network, or any other platform of your choice.
                     </div>
                 </div>
             </div>
@@ -333,8 +329,8 @@
                     <div class="advantage_item">
                         <div class="advantage_item_emoj">
                             <picture>
-                                <source srcset="/images/v2/e1.webp" type="image/webp">
-                                <img src="/images/v2/e1.png" alt srcset="/images/v2/e1.png 1x, /images/v2/e1@2x.png 2x">
+                                <source srcset="/images/v2/best1.svg" type="image/svg">
+                                <img src="/images/v2/best1.svg" alt srcset="/images/v2/best1.svg 1x, /images/v2/best1.svg 2x">
                             </picture>
                         </div>
                         <h4>Simplicity </h4>
@@ -347,8 +343,8 @@
                     <div class="advantage_item">
                         <div class="advantage_item_emoj">
                             <picture>
-                                <source srcset="/images/v2/e2.webp" type="image/webp">
-                                <img src="/images/v2/e2.png" alt srcset="/images/v2/e2.png 1x, /images/v2/e2@2x.png 2x">
+                                <source srcset="/images/v2/best2.svg" type="image/svg">
+                                <img src="/images/v2/best2.svg" alt srcset="/images/v2/best2.svg 1x, /images/v2/best2.svg 2x">
                             </picture>
                         </div>
                         <h4>Security</h4>
@@ -361,8 +357,8 @@
                     <div class="advantage_item">
                         <div class="advantage_item_emoj">
                             <picture>
-                                <source srcset="/images/v2/e3.webp" type="image/webp">
-                                <img src="/images/v2/e3.png" alt srcset="/images/v2/e3.png 1x, /images/v2/e3@2x.png 2x">
+                                <source srcset="/images/v2/best3.svg" type="image/svg">
+                                <img src="/images/v2/best3.svg" alt srcset="/images/best3.svg 1x, /images/v2/best3.svg 2x">
                             </picture>
                         </div>
                         <h4>Flexibility</h4>
@@ -375,8 +371,8 @@
                     <div class="advantage_item">
                         <div class="advantage_item_emoj">
                             <picture>
-                                <source srcset="/images/v2/e4.webp" type="image/webp">
-                                <img src="/images/v2/e4.png" alt srcset="/images/v2/e4.png 1x, /images/v2/e4@2x.png 2x">
+                                <source srcset="/images/v2/best4.svg" type="image/svg">
+                                <img src="/images/v2/best4.svg" alt srcset="/images/v2/best4.svg 1x, /images/v2/best4.svg 2x">
                             </picture>
                         </div>
                         <h4>Control</h4>
