Adding v2 in ing3

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <div class="advantage_item_emoj">
                             <picture>
                                 <source srcset="/images/v2/best3.svg" type="image/svg">
-                                <img src="/images/v2/best3.svg" alt srcset="/images/best3.svg 1x, /images/v2/best3.svg 2x">
+                                <img src="/images/v2/best3.svg" alt srcset="/images/v2/best3.svg 1x, /images/v2/best3.svg 2x">
                             </picture>
                         </div>
                         <h4>Flexibility</h4>
